--- a/BookManager/BookManager.csproj
+++ b/BookManager/BookManager.csproj
@@ -202,8 +202,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Book\Index.cshtml" />
     <Content Include="Views\Book\BookList.cshtml" />
+    <Content Include="Views\Book\Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
